--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
   line-height: 1.4;
   background-color: #ffffff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  overflow-y: auto;
+  /* overflow-y: auto; */
 }
 
 .resume-template {
