--- a/styles.css
+++ b/styles.css
@@ -11,12 +11,14 @@ body {
   display: flex;
   justify-content: center;
   width: 100%;
+  padding: 0 20px; /* Add padding to left and right */
   margin: 20px 0;
 }
 
 .resume-template,
 .highlighted-resume {
-  width: 8.5in;
+  /* width: 8.5in; */
+  width: calc(50% - 20px);
   height: 11in;
   padding: 0.5in;
   box-sizing: border-box;
