--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,8 @@ p {
 
 h2 {
   border-bottom: 2px solid #000;
-  padding-bottom: 5px;
+  padding: 0px;
+  /* padding-bottom: 5px; */
   margin-top: 0;
 }
 
